Fixed z-index problem with context menus

--- a/src/renderer/css/index.css
+++ b/src/renderer/css/index.css
@@ -282,7 +282,7 @@
     border-radius: 4px;
     display: flex;
     flex-direction: column;
-    z-index: 100;
+    z-index: 1000;
 }
 
 #playlistHeader {
@@ -401,7 +401,7 @@
     border-radius: 4px;
     display: flex;
     flex-direction: column;
-    z-index: 100;
+    z-index: 1000;
 }
 
 #settingsMenu .input-row {
